feat[notification]: added resident notification
