# src/swagger.json
@@ -943,6 +943,124 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"GetNotificationDto": {
+				"properties": {
+					"notificationId": {
+						"type": "number",
+						"format": "double"
+					},
+					"notificationGuid": {
+						"type": "string"
+					},
+					"userGuid": {
+						"type": "string"
+					},
+					"title": {
+						"type": "string"
+					},
+					"body": {
+						"type": "string"
+					},
+					"data": {},
+					"isRead": {
+						"type": "boolean"
+					},
+					"createdBy": {
+						"type": "string"
+					},
+					"createdDateTime": {
+						"type": "string"
+					},
+					"updatedBy": {
+						"type": "string"
+					},
+					"updatedDateTime": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"notificationId",
+					"notificationGuid",
+					"userGuid",
+					"title",
+					"body",
+					"data",
+					"isRead",
+					"createdBy",
+					"createdDateTime",
+					"updatedBy",
+					"updatedDateTime"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IPaginatedResponse_GetNotificationDto_": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"status": {
+						"type": "string"
+					},
+					"data": {
+						"properties": {
+							"count": {
+								"type": "number",
+								"format": "double"
+							},
+							"list": {
+								"items": {
+									"$ref": "#/components/schemas/GetNotificationDto"
+								},
+								"type": "array",
+								"nullable": true
+							}
+						},
+						"required": [
+							"count",
+							"list"
+						],
+						"type": "object"
+					}
+				},
+				"required": [
+					"data"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"IResponse_GetNotificationDto-Array_": {
+				"properties": {
+					"message": {
+						"type": "string"
+					},
+					"data": {
+						"anyOf": [
+							{
+								"items": {
+									"$ref": "#/components/schemas/GetNotificationDto"
+								},
+								"type": "array"
+							},
+							{
+								"items": {
+									"items": {
+										"$ref": "#/components/schemas/GetNotificationDto"
+									},
+									"type": "array"
+								},
+								"type": "array"
+							}
+						],
+						"nullable": true
+					},
+					"status": {
+						"type": "string"
+					}
+				},
+				"type": "object",
+				"additionalProperties": false
+			},
 			"CreateNoticeDto": {
 				"properties": {
 					"title": {
@@ -2715,6 +2833,68 @@
 						"jwt": [
 							"RES",
 							"SUB"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "query",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "query",
+						"name": "limit",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/notification": {
+			"get": {
+				"operationId": "getNotification",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IPaginatedResponse_GetNotificationDto_"
+								}
+							}
+						}
+					},
+					"400": {
+						"description": "Bad Request",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/IResponse_GetNotificationDto-Array_"
+								},
+								"examples": {
+									"Example 1": {}
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Notification"
+				],
+				"security": [
+					{
+						"jwt": [
+							"RES",
+							"SUB",
+							"STF"
 						]
 					}
 				],
